# MR3001B_Design_and_Development_of_Robots_I

./: LICENSE  MR3001B_Design_and_Development_of_Robots_I_v1.docx  README.md
MCR2_Puzzlebot_MATLAB/VM/ROS packages/signal_gen/: CMakeLists.txt  package.xml
MCR2_Puzzlebot_MATLAB/VM/ROS packages/signal_gen/launch/: signal_gen.launch
MCR2_Puzzlebot_MATLAB/VM/ROS packages/signal_gen/scripts/: signal_generator.py
MCR2_Puzzlebot_MATLAB/simulink/: MCR2_Example_Gazebo_Publisher_Subscriber.slx  MCR2_Example_Publisher.slx  MCR2_Example_Publisher_Subscriber.slx  MCR2_Example_Subscriber.slx  MCR2_Puzzlebot_Simulink_Example.slx
Misc/: README.md
Week 1/: README.md
Week 1/Activities/: README.md
Week 1/Challenge/: README.md
Week 1/Presentations/: README.md
Week 2/: README.md
Week 2/Activities/: README.md
Week 2/Challenge/: MCR2_Robot_Modelling_challenge.pptx  README.md
Week 2/Presentations/: MCR2_RVIZ_simple_manipulator_exercise.pptx  README.md
Week 3/: README.md
Week 3/Activities/: README.md
Week 3/Challenge/: MCR2_Mini_Challenge_3.pptx  README.md
Week 3/Presentations/: README.md
Week 4/: README.md
Week 4/Activities/: README.md
Week 4/Challenge/: MCR2_Mini_Challenge.pptx  MCR2_Mini_Challenge6.pptx  MCR2_Puzzlebot_Gazebo_Simulator.pptx  README.md  open_loop_ctrl_test.py
Week 4/Presentations/: Activity_1.pptx  MCR2_single_link_manipulator.pptx  README.md
Week 5/: README.md
Week 5/Final Challenge/: MCR2_Final_Challenge.pptx
Week 5/Presentations/: MCR2_Closed_Loop_Control_v2.pptx  README.md
class_ws/: Dockerfile  README.md
(+245 files in other folders)
