<?xml version="1.0"?>
<package format="2">
  <name>signal_gen</name>
  <version>1.0.0</version>
  <description>The signal_gen package</description>
  <maintainer email="mario.mtz@manchester-robotics.com">Mario Martinez</maintainer>
  <license>MIT</license>
  <author email="mario.mtz@manchester-robotics.com">Mario Martinez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
